# bee-swarm

./: .gitignore  CHAT.md  NOTE.md  README.md  VISION.md  pyproject.toml  requirements.txt
agents/: code-executor.yaml  default-worker.yaml  literature-reviewer.yaml
docs/: architecture.md  phase1_delivery_report.md  worker_bee_design.html
docs/design-notes/: 00-INDEX.md  01-aristotle-bee.md  02-skeleton-bee.md  02b-skeleton-skills.md  03-pm-bee.md  04-world-bee.md  05-centurion-bee.md  07-full-agent-ecosystem.md  08-strategy-bee.md  09-cardmaster-bee.md
docs/design-notes/architecture-study/: aevo-harnessing-agentic-evolution.md  autogenesis-self-evolving-agent-protocol.md
scripts/: e2e_live.py
src/base/: agent_loop.py  llm_backend.py  tool_calling.py
src/bees/: built_in_tools.py  centurion_bee.py  pm_bee.py  worker_bee.py
src/bus/: artifact.py  naming.py  task_card.py
src/factory/: __init__.py  agent_definition.py  agent_registry.py  agent_spawner.py  supervisor.py
src/knowledge/: graph_store.py
src/memory/: __init__.py  bee_memory.py
tests/: test_e2e.py  test_factory.py  test_memory.py
