[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bee-swarm"
version = "0.2.0"
description = "File-as-Bus agent swarm with nanobot memory bridge"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "nanobot-ai>=0.2.0,<0.3",
    "aiohttp>=3.14",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
worker-bee = "src.bees.worker_bee:main"
centurion-bee = "src.bees.centurion_bee:main"
pm-bee = "src.bees.pm_bee:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
